--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   <link rel="stylesheet" href="./assets/toastr.css">
+  <link rel="stylesheet" href="./assets/animate.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -39,7 +40,7 @@
         padding: 0;
       }
     </style>
-    <img src="./assets/logo/Portfolio logo.svg" alt="logo">
+    <img src="./assets/logo/Portfolio logo.svg" class="animated zoomIn" alt="logo">
   </app-root>
 
 
