--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 
-<body class="body-border" id="intro-section">
+<body class="body-border animated fadeIn" id="intro-section">
   <app-root>
     <style>
       app-root {
